<resources>
    <string name="clh_add_vm_number_str_txt">Add</string>
    <string name="clh_no_vm_number_msg_txt">No voicemail number is saved on the SIM card.</string>
    <string name="clh_no_vm_number_txt">Missing voicemail number</string>
    <string name="clh_busy_tone_sent_txt">Busy tone sent</string>
    <string name="clh_call_ending_call_txt">Ending call...</string>
    <string name="clh_call_on_hold_txt">On hold</string>
    <string name="clh_call_waiting_answer_txt">Answer</string>
    <string name="clh_call_waiting_info_txt">Call waiting</string>
    <string name="clh_call_waiting_reject_txt">Busy</string>
    <string name="clh_call_waiting_replace_txt">Replace</string>
    <string name="clh_end_held_call_txt">End held call</string>
    <string name="clh_callFailed_cb_enabled_txt">You cannot make outgoing calls while call blocking is on.</string>
    <string name="clh_callFailed_congestion_txt">Network busy</string>
    <string name="clh_callFailed_dsac_restricted_emergency_txt">Emergency calls are restricted by access control.</string>
    <string name="clh_callFailed_dsac_restricted_normal_txt">Normal calls are restricted by access control.</string>
    <string name="clh_callFailed_dsac_restricted_txt">Calls are restricted by access control</string>
    <string name="clh_callFailed_fdn_only_txt">Outgoing calls are restricted by FDN</string>
    <string name="clh_callFailed_imei_not_accepted_txt">Call Failed. Error code: MM #5</string>
    <string name="clh_callFailed_imsi_unknown_vlr_txt">Call failed, IMSI unknown in VLR. Error code: MM #4</string>
    <string name="clh_callFailed_limitExceeded_txt">No money left on prepaid card</string>
    <string name="clh_callFailed_noSignal_txt">No network</string>
    <string name="clh_callFailed_outOfService_txt">Out of service area</string>
    <string name="clh_callFailed_carrier_invalid_sim_card_txt">Invalid SIM card</string>
    <string name="clh_callFailed_powerOff_txt">Radio off</string>
    <string name="clh_callFailed_simError_txt">No SIM card or SIM card error</string>
    <string name="clh_callFailed_userBusy_txt">Line busy</string>
    <string name="clh_card_title_call_ended_txt">Call ended</string>
    <string name="clh_callFailed_unassigned_number_txt">Unassigned (unallocated) number</string>
    <string name="clh_callFailed_no_route_to_destination_txt">No route to destination</string>
    <string name="clh_callFailed_channel_unacceptable_txt">Channel unacceptable</string>
    <string name="clh_callFailed_operator_determined_barring_txt">Operator determined barring</string>
    <string name="clh_callFailed_normal_call_clearing_txt">Normal call clearing</string>
    <string name="clh_callFailed_user_busy_txt">User busy</string>
    <string name="clh_callFailed_no_user_responding_txt">No user responding</string>
    <string name="clh_callFailed_user_alerting_txt">User alerting, no answer</string>
    <string name="clh_callFailed_call_rejected_txt">Call rejected</string>
    <string name="clh_callFailed_number_changed_txt">Number changed</string>
    <string name="clh_callFailed_pre_emption_txt">Pre-emption</string>
    <string name="clh_callFailed_non_selected_user_clearing_txt">Non selected user clearing</string>
    <string name="clh_callFailed_destination_out_of_order_txt">Destination out of order</string>
    <string name="clh_callFailed_invalid_number_format_txt">Invalid number format (incomplete number)</string>
    <string name="clh_callFailed_facility_rejected_txt">Facility rejected</string>
    <string name="clh_callFailed_response_to_STATUS_ENQUIRY_txt">Response to STATUS ENQUIRY</string>
    <string name="clh_callFailed_normal_unspecified_txt">Normal, unspecified</string>
    <string name="clh_callFailed_no_circuit_available_txt">No circuit/channel available</string>
    <string name="clh_callFailed_network_out_of_order_txt">Network out of order</string>
    <string name="clh_callFailed_temporary_failure_txt">Temporary failure</string>
    <string name="clh_callFailed_switching_equipment_congestion_txt">Switching equipment congestion</string>
    <string name="clh_callFailed_access_information_discarded_txt">Access information discarded</string>
    <string name="clh_callFailed_requested_circuit_txt">Requested circuit/channel not available</string>
    <string name="clh_callFailed_resources_unavailable_unspecified_txt">Resources unavailable, unspecified</string>
    <string name="clh_callFailed_quality_of_service_unavailable_txt">Quality of service unavailable</string>
    <string name="clh_callFailed_requested_facility_not_subscribed_txt">Requested facility not subscribed</string>
    <string name="clh_callFailed_incoming_calls_barred_within_the_CUG_txt">Incoming calls barred within the CUG</string>
    <string name="clh_callFailed_bearer_capability_not_authorized_txt">Bearer capability not authorized</string>
    <string name="clh_callFailed_bearer_capability_not_presently_available_txt">Bearer capability not presently available</string>
    <string name="clh_callFailed_service_or_option_not_available_unspecified_txt">Service or option not available, unspecified</string>
    <string name="clh_callFailed_bearer_service_not_implemented_txt">Bearer service not implemented</string>
    <string name="clh_callFailed_ACM_equal_to_or_greater_than_ACMmax_txt">ACM equal to or greater than ACMmax</string>
    <string name="clh_callFailed_requested_facility_not_implemented_txt">Requested facility not implemented</string>
    <string name="clh_callFailed_only_restricted_digital_information_bearer_capability_is_available_txt">Only restricted digital information bearer capability is available</string>
    <string name="clh_callFailed_service_or_option_not_implemented_unspecified_txt">Service or option not implemented, unspecified</string>
    <string name="clh_callFailed_invalid_transaction_identifier_value_txt">Invalid transaction identifier value</string>
    <string name="clh_callFailed_user_not_member_of_CUG_txt">User not member of CUG</string>
    <string name="clh_callFailed_incompatible_destination_txt">Incompatible destination</string>
    <string name="clh_callFailed_invalid_transit_network_selection_txt">Invalid transit network selection</string>
    <string name="clh_callFailed_semantically_incorrect_message_txt">Semantically incorrect message</string>
    <string name="clh_callFailed_invalid_mandatory_information_txt">Invalid mandatory information</string>
    <string name="clh_callFailed_message_type_non_existent_or_not_implemented_txt">Message type non-existent or not implemented</string>
    <string name="clh_callFailed_message_type_not_compatible_with_protocol_state_txt">Message type not compatible with protocol state</string>
    <string name="clh_callFailed_information_element_non_existent_or_not_implemented_txt">Information element non-existent or not implemented</string>
    <string name="clh_callFailed_conditional_IE_error_txt">Conditional IE error</string>
    <string name="clh_callFailed_message_not_compatible_with_protocol_state_txt">Message not compatible with protocol state</string>
    <string name="clh_callFailed_recovery_on_timer_expiry_txt">Recovery on timer expiry</string>
    <string name="clh_callFailed_protocol_Error_unspecified_txt">Protocol error, unspecified</string>
    <string name="clh_callFailed_interworking_unspecified_txt">Interworking, unspecified</string>
    <string name="clh_conference_call_title_txt">Conference</string>
    <string name="clh_dial_emergency_empty_error_txt">Call not sent, please dial an emergency number!</string>
    <string name="clh_dial_emergency_error_txt">Call not sent, %s is not an emergency number!</string>
    <string name="clh_emergency_enable_radio_dialog_title_txt">Emergency call</string>
    <string name="clh_error_supp_service_separate_txt">Unable to separate call</string>
    <string name="clh_error_supp_service_switch_txt">Unable to switch calls</string>
    <string name="clh_error_supp_service_transfer_txt">Unable to transfer call</string>
    <string name="clh_incall_error_call_failed_txt">Call not sent</string>
    <string name="clh_incall_error_emergency_only_txt">Emergency calls only</string>
    <string name="clh_incall_error_out_of_service_txt">Mobile network not available</string>
    <string name="clh_incall_error_no_phone_number_supplied_txt">Call not sent, no valid number entered.</string>
    <string name="clh_incall_error_power_off_txt">Turn off airplane mode to place a call</string>
    <string name="clh_incall_error_supp_service_conference_txt">Cannot make conference calls</string>
    <string name="clh_incall_error_supp_service_hangup_txt">Unable to release call(s)</string>
    <string name="clh_incall_error_supp_service_reject_txt">Unable to reject call</string>
    <string name="clh_incall_error_supp_service_separate_txt">Unable to separate call</string>
    <string name="clh_incall_error_supp_service_switch_txt">Unable to switch calls</string>
    <string name="clh_incall_error_supp_service_transfer_txt">Unable to transfer call</string>
    <string name="clh_incall_error_supp_service_unknown_txt">Unsupported service</string>
    <string name="clh_incall_status_dialed_mmi_txt">Starting MMI sequence…</string>
    <string name="clh_internal_dialpad_0_txt">0</string>
    <string name="clh_internal_dialpad_1_txt">1</string>
    <string name="clh_internal_dialpad_2_txt">2</string>
    <string name="clh_internal_dialpad_3_txt">3</string>
    <string name="clh_internal_dialpad_4_txt">4</string>
    <string name="clh_internal_dialpad_5_txt">5</string>
    <string name="clh_internal_dialpad_6_txt">6</string>
    <string name="clh_internal_dialpad_7_txt">7</string>
    <string name="clh_internal_dialpad_8_txt">8</string>
    <string name="clh_internal_dialpad_9_txt">9</string>
    <string name="clh_internal_dialpad_hash_txt">\#</string>
    <string name="clh_internal_dialpad_label_0_txt">+</string>
    <string name="clh_internal_dialpad_label_1_txt" />
    <string name="clh_internal_dialpad_label_2_txt">ABC</string>
    <string name="clh_internal_dialpad_label_3_txt">DEF</string>
    <string name="clh_internal_dialpad_label_4_txt">GHI</string>
    <string name="clh_internal_dialpad_label_5_txt">JKL</string>
    <string name="clh_sound_menu_handset_earpiece_txt">Handset earpiece</string>
    <string name="clh_sound_menu_bluetooth_txt">Bluetooth device</string>
    <string name="clh_large_icbp_speaker_txt">Speaker</string>
    <string name="phone_call_ended_call_back_txt">Call back</string>
    <string name="phone_call_ended_send_message_txt">Send message</string>
    <string name="phone_call_ended_add_to_contacts_txt">Add to Contacts</string>
    <string name="phone_strings_dialpad_0_txt">0</string>
    <string name="phone_strings_dialpad_1_txt">1</string>
    <string name="phone_strings_dialpad_2_txt">2</string>
    <string name="phone_strings_dialpad_3_txt">3</string>
    <string name="phone_strings_dialpad_4_txt">4</string>
    <string name="phone_strings_dialpad_5_txt">5</string>
    <string name="phone_strings_dialpad_6_txt">6</string>
    <string name="phone_strings_dialpad_7_txt">7</string>
    <string name="phone_strings_dialpad_8_txt">8</string>
    <string name="phone_strings_dialpad_9_txt">9</string>
    <string name="general_dialpad_hash_txt">\#</string>
    <string name="general_dialpad_label_0_txt">+</string>
    <string name="general_dialpad_label_2_txt">ABC</string>
    <string name="general_dialpad_label_3_txt">DEF</string>
    <string name="general_dialpad_label_4_txt">GHI</string>
    <string name="general_dialpad_label_5_txt">JKL</string>
    <string name="general_dialpad_label_6_txt">MNO</string>
    <string name="general_dialpad_label_7_txt">PQRS</string>
    <string name="general_dialpad_label_8_txt">TUV</string>
    <string name="general_dialpad_label_9_txt">WXYZ</string>
    <string name="general_dialpad_star_txt">*</string>
    <string name="contactPhoto">Contact photo</string>
</resources>