<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bluetoothAndSpeaker" android:background="#99000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearance" android:textSize="19.0dip" android:gravity="center_vertical" android:id="@id/speakerButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="310.0dip" android:layout_height="48.0dip" android:text="@string/clh_large_icbp_speaker_txt" />
    <ImageView android:background="@drawable/somc_incallscreen_popupdailog_divider" android:layout_width="310.0dip" android:layout_height="1.0dip" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="19.0dip" android:gravity="center_vertical" android:id="@id/normalButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="310.0dip" android:layout_height="48.0dip" android:text="@string/clh_sound_menu_handset_earpiece_txt" />
    <ImageView android:background="@drawable/somc_incallscreen_popupdailog_divider" android:layout_width="310.0dip" android:layout_height="1.0dip" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="19.0dip" android:gravity="center_vertical" android:id="@id/bluetoothButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="310.0dip" android:layout_height="48.0dip" android:text="@string/clh_sound_menu_bluetooth_txt" />
</LinearLayout>
