<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/callEndedLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:gravity="center_horizontal" android:id="@id/callEndedInfoTop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <com.android.phone.SomcContactPicView android:id="@id/callEndedContactImage" android:layout_width="fill_parent" android:layout_height="@dimen/incall_screen_contact_picture_height" android:contentDescription="@string/contactPhoto" />
            <RelativeLayout android:background="@drawable/callhandling_contact_name_bg" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:directionality="leftToRight">
                <view android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_call_large_header_text_size" android:ellipsize="end" android:id="@id/callEndedNameOrNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="@dimen/incall_screen_call_large_header_margin_right" android:singleLine="true" phone:maxTextSize="@dimen/incall_screen_call_large_header_text_normal_size" phone:minTextSize="@dimen/incall_screen_call_large_header_text_small_size" phone:maxTextLength="@dimen/incall_screen_call_large_header_text_max_length" class="com.android.phone.SomcContactTextView" />
                <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_contact_number_text_size" android:ellipsize="end" android:id="@id/callEndedTypeAndNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_below="@id/callEndedNameOrNumber" android:directionality="leftToRight" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:gravity="bottom|center" android:id="@id/callEndedInfoBottom" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentBottom="true">
            <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_call_time_text_size" android:textColor="#ffffffff" android:gravity="center" android:id="@id/callEndedCallDuration" android:layout_width="fill_parent" android:layout_height="@dimen/incall_screen_call_info_defalut_height" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:layout_marginBottom="@dimen/incall_screen_margin_size_six" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="2.0" android:layout_above="@id/callEndedEndCallIconAndInfo" android:layout_centerHorizontal="true" />
            <LinearLayout android:gravity="center" android:id="@id/callEndedEndCallIconAndInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/incall_screen_end_call_info_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:directionality="leftToRight">
                <ImageView android:id="@id/callEndedHungupIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:src="@drawable/clh_large_icbp_hangup" />
                <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_call_default_middle_text_size" android:textColor="#ffffffff" android:gravity="center" android:id="@id/callEndedCallEndedText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:text="@string/clh_card_title_call_ended_txt" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="2.0" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip">
        <LinearLayout android:layout_gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:baselineAligned="false">
            <LinearLayout android:gravity="center" android:id="@id/callEndedCallBack" android:layout_width="fill_parent" android:layout_height="@dimen/incall_screen_waitting_and_call_pane_button_height" android:layout_marginLeft="@dimen/incall_screen_end_call_button_margin_size" android:layout_marginRight="@dimen/incall_screen_end_call_button_second_margin_size" android:layout_weight="1.0" android:directionality="leftToRight" style="@android:style/Widget.DeviceDefault.Light.Button">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:src="@drawable/ic_callended_call_back" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/incall_screen_bluetooth_button_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_call_ended_call_back_txt" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@id/callEndedSendSms" android:layout_width="fill_parent" android:layout_height="@dimen/incall_screen_waitting_and_call_pane_button_height" android:layout_marginLeft="@dimen/incall_screen_end_call_button_second_margin_size" android:layout_marginRight="@dimen/incall_screen_end_call_button_margin_size" android:layout_weight="1.0" android:directionality="leftToRight" style="@android:style/Widget.DeviceDefault.Light.Button">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-4.0dip" android:layout_marginRight="0.0dip" android:src="@drawable/ic_callended_send_message" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/incall_screen_bluetooth_button_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/phone_call_ended_send_message_txt" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/incall_screen_bluetooth_button_text_size" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/callEndedAddToContacts" android:layout_width="fill_parent" android:layout_height="@dimen/incall_screen_waitting_and_call_pane_button_height" android:layout_marginLeft="@dimen/incall_screen_end_call_button_margin_size" android:layout_marginRight="@dimen/incall_screen_end_call_button_margin_size" android:text="@string/phone_call_ended_add_to_contacts_txt" android:singleLine="true" />
    </LinearLayout>
</FrameLayout>
